# solciety-program

./: Anchor.toml  package.json
idl/: solciety.json
indexer/: app.ts
programs/solciety-program/: Cargo.toml
programs/solciety-program/src/: lib.rs
programs/solsociety/: Cargo.toml
programs/solsociety/src/: errors.rs  lib.rs
programs/solsociety/src/instruction/: post.rs
programs/solsociety/src/instructions/: comment.rs  follow.rs  mod.rs  post.rs  unfollow.rs
programs/solsociety/src/state/: comment.rs  follow.rs  mod.rs  post.rs  unfollow.rs
scripts/: test.js
tests/: comment.ts  index.ts  solciety-program.ts  solsociety.ts
